--- a/examples/websocket.html
+++ b/examples/websocket.html
@@ -9,8 +9,12 @@ http://assorted.svn.sourceforge.net/viewvc/assorted/real-time-plotter/trunk/src/
 var iets = "";
 window.onload = function() {
     var data = {};
-    //var s = new MozWebSocket("ws://localhost:8000/data");
-    var s = new WebSocket("ws://localhost:8000/data");
+	try {
+		var s = new WebSocket("ws://localhost:8000/data");
+	}
+	catch (e) {
+		var s = new MozWebSocket("ws://localhost:8000/data");
+	}
     s.onopen = function() {
         //alert('open');
         s.send('hi');
